# oop_course

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cpp  tests.cpp  vowel_counter.cpp  vowel_counter.h
lab2/: CMakeLists.txt  README.md  include.h  main.cpp  tests.cpp  twelve.cpp
lab3/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab3/figures/: figure.h  hexagon.cpp  hexagon.h  octagon.cpp  octagon.h  point.cpp  point.h  triangle.cpp  triangle.h
lab3/prototype/: test.cpp  test.h
lab3/vector/: vector.cpp  vector.h
lab4/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab4/figures/: figure.h  hexagon.h  octagon.h  point.h  triangle.h
lab4/vector/: vector.h
lab5/: CMakeLists.txt  README.md  allocator.h  allocator1.h  forward_list.h  main.cpp  tests.cpp
lab6/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab6/npc/: npc.h
lab6/patterns/: factory.cpp
lab6/point/: point.h
lab7/: CMakeLists.txt  README.md  main.cpp
lab7/npc/: npc.cpp  npc.h
lab7/patterns/: factory.cpp  observer.cpp  observer.h
